--------------------------------------------------------------------------
---------                  Ampache -- CHANGELOG                  ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.3.3-Alpha1
	- Added Generate Config tool for admins to update their configs
		to the latest version. It reads current settings and merges
		with the new config file and prompts for a download
	- Added PutENV check on test page to make sure we can redefine
		memory limit and safemode is off
	- Added Russian translation (Thx Dimon) 
	- Fixed a problem with vainfo ignoring file pattern if no other
		tags were found
	- Added new version of getid3() library which will hopefully 
		resolve some PHP5 related issues
	- Fixed security issue that allowed users to gain gues access to
		ampache if register globals is enabled. 
	- Added xml based query for artists,genre,albums and search see
		/server/xml.server.php
	- Fixed false positive error and PHP5 related error on archive
		creation
	- Added <image> tag for album art and ability to filter rss feed
		by user by adding ?username=<username> to rss link.  
	- Added LDAP/Active Directory  auth support (Thx Rubin & pb1dft)
	- Added ajax support to ratings, no longer requires a refresh, 
		hello instant gratification. 
	- Tweaked Kajax, now accepts an array of elements to replace
		from a passed xml document. allows for multiple targets
		on a single ajax request 
	- Fixed display of disabled localplay methods, Preferences will
		now only display active ones. 
	- Fixed MPD Controller to attempt to find files based on filename
		if they were added outside of ampache
	- Tweaked Now Playing to prevent wrapping of Album Art.
	- Tweaked stylesheet to fix problem with Firefox and the :active
		style on the sidebar with the select drop downs
	- Added Options to Mail statistics to users when sending them
		a message (Thx pb1dft)
